--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # a.txt 제외
-# a.txt
+a.txt
 
 # 디렉토리는 /를 붙여서
 # subdir/
 
 # 패턴 사용
-*.txt
+#*.txt
 
 # 무시하지 않고 싶으면
-!a.txt
+#!a.txt
 
+# 2개의 asterisk (**) 디렉토리 내부의 디렉토리 지정
+a/**/x
+# a/x a/b/x a/b/c/x  
